--- a/ImageReader/ImageReader/MainWindow.xaml
+++ b/ImageReader/ImageReader/MainWindow.xaml
@@ -1,12 +1,86 @@
 ﻿<Window x:Class="ImageReader.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ImageReader"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
+        xmlns:viewModel="clr-namespace:ImageReader.ViewModel"
+        xmlns:converter="clr-namespace:ImageReader.Model"
+        Title="ImageReader" Height="350" Width="525">
+
+    <Window.DataContext>
+        <viewModel:MainWindowViewModel/>
+    </Window.DataContext>
+
+    <Window.Resources>
+
+        <SolidColorBrush x:Key="brushWatermarkBackground" Color="White" />
+        <SolidColorBrush x:Key="brushWatermarkForeground" Color="LightSteelBlue" />
+
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <converter:BoolConverter x:Key="BoolConverter"/>
+
+        <Style x:Key="EntryFieldStyle" TargetType="Grid" >
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
+
+    </Window.Resources>
+    
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="8"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="8"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="8"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="8"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="8"/>
+            <RowDefinition Height="30"/>            
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="8"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="8"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Image Grid.Row="0" Grid.Column="0" Source="{Binding Image1, UpdateSourceTrigger=PropertyChanged}"/>
+        <Image Grid.Row="0" Grid.Column="2" Source="{Binding Image2, UpdateSourceTrigger=PropertyChanged}"/>
+        <Image Grid.Row="0" Grid.Column="4" Source="{Binding Image3, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <TextBlock Grid.Row="2" Grid.Column="0" Text="  Введите URL..." Foreground="{StaticResource brushWatermarkForeground}"
+                       Visibility="{Binding ElementName=URL1, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <TextBlock Grid.Row="2" Grid.Column="2" Text="  Введите URL..." Foreground="{StaticResource brushWatermarkForeground}"
+                       Visibility="{Binding ElementName=URL2, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <TextBlock Grid.Row="2" Grid.Column="4" Text="  Введите URL..." Foreground="{StaticResource brushWatermarkForeground}"
+                       Visibility="{Binding ElementName=URL3, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
+        <TextBox Name="URL1" Grid.Row="2" Grid.Column="0" Background="Transparent" Text="{Binding URL1}"/>
+        <TextBox Name="URL2" Grid.Row="2" Grid.Column="2" Background="Transparent" Text="{Binding URL2}"/>
+        <TextBox Name="URL3" Grid.Row="2" Grid.Column="4" Background="Transparent" Text="{Binding URL3}"/>
+
+        <Button IsEnabled="{Binding ElementName=URL1, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
+                Grid.Row="4" Grid.Column="0" Content="Start" Command="{Binding StartLoadImage1}"/>
+        <Button IsEnabled="{Binding ElementName=URL2, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
+                Grid.Row="4" Grid.Column="2" Content="Start" Command="{Binding StartLoadImage2}"/>
+        <Button IsEnabled="{Binding ElementName=URL3, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
+                Grid.Row="4" Grid.Column="4" Content="Start" Command="{Binding StartLoadImage3}"/>
+        <Button IsEnabled="{Binding ElementName=URL1, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
+                Grid.Row="6" Grid.Column="0" Content="Stop" Command="{Binding StopLoadImage1}"/>
+        <Button IsEnabled="{Binding ElementName=URL2, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
+                Grid.Row="6" Grid.Column="2" Content="Stop" Command="{Binding StopLoadImage2}"/>
+        <Button IsEnabled="{Binding ElementName=URL3, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
+                Grid.Row="6" Grid.Column="4" Content="Stop" Command="{Binding StopLoadImage3}"/>
+
+        <Button Grid.Row="8" Grid.ColumnSpan="5" Content="Start all" Command="{Binding StartAll}"/>
         
+        <TextBlock Grid.Row="8" Grid.Column="0"/>
+        <TextBlock Grid.Row="8" Grid.Column="2"/>
+        <TextBlock Grid.Row="8" Grid.Column="4"/>
+
+        <ProgressBar Grid.Row="10" Grid.ColumnSpan="5" Value="{Binding ProgressLoad, UpdateSourceTrigger=PropertyChanged}" Minimum="0" Maximum="{Binding MaxSize, UpdateSourceTrigger=PropertyChanged}"/>
+
     </Grid>
 </Window>
