--- a/ImageReader/ImageReader/MainWindow.xaml
+++ b/ImageReader/ImageReader/MainWindow.xaml
@@ -15,13 +15,6 @@
         <SolidColorBrush x:Key="brushWatermarkForeground" Color="LightSteelBlue" />
 
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <converter:BoolConverter x:Key="BoolConverter"/>
-
-        <Style x:Key="EntryFieldStyle" TargetType="Grid" >
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-        </Style>
-
     </Window.Resources>
     
     <Grid Margin="10">
@@ -38,6 +31,7 @@
             <RowDefinition Height="8"/>
             <RowDefinition Height="30"/>            
         </Grid.RowDefinitions>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="8"/>
@@ -57,30 +51,20 @@
         <TextBlock Grid.Row="2" Grid.Column="4" Text="  Введите URL..." Foreground="{StaticResource brushWatermarkForeground}"
                        Visibility="{Binding ElementName=URL3, Path=Text.IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
-        <TextBox Name="URL1" Grid.Row="2" Grid.Column="0" Background="Transparent" Text="{Binding URL1}"/>
-        <TextBox Name="URL2" Grid.Row="2" Grid.Column="2" Background="Transparent" Text="{Binding URL2}"/>
-        <TextBox Name="URL3" Grid.Row="2" Grid.Column="4" Background="Transparent" Text="{Binding URL3}"/>
+        <TextBox Name="URL1" Grid.Row="2" Grid.Column="0" Background="Transparent" Text="{Binding URL1, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Name="URL2" Grid.Row="2" Grid.Column="2" Background="Transparent" Text="{Binding URL2, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Name="URL3" Grid.Row="2" Grid.Column="4" Background="Transparent" Text="{Binding URL3, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Button IsEnabled="{Binding ElementName=URL1, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
-                Grid.Row="4" Grid.Column="0" Content="Start" Command="{Binding StartLoadImage1}"/>
-        <Button IsEnabled="{Binding ElementName=URL2, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
-                Grid.Row="4" Grid.Column="2" Content="Start" Command="{Binding StartLoadImage2}"/>
-        <Button IsEnabled="{Binding ElementName=URL3, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
-                Grid.Row="4" Grid.Column="4" Content="Start" Command="{Binding StartLoadImage3}"/>
-        <Button IsEnabled="{Binding ElementName=URL1, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
-                Grid.Row="6" Grid.Column="0" Content="Stop" Command="{Binding StopLoadImage1}"/>
-        <Button IsEnabled="{Binding ElementName=URL2, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
-                Grid.Row="6" Grid.Column="2" Content="Stop" Command="{Binding StopLoadImage2}"/>
-        <Button IsEnabled="{Binding ElementName=URL3, Path=Text.IsEmpty, Converter={StaticResource BoolConverter}}"
-                Grid.Row="6" Grid.Column="4" Content="Stop" Command="{Binding StopLoadImage3}"/>
+        <Button Grid.Row="4" Grid.Column="0" Content="Start" Command="{Binding StartLoadImage1, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="4" Grid.Column="2" Content="Start" Command="{Binding StartLoadImage2, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="4" Grid.Column="4" Content="Start" Command="{Binding StartLoadImage3, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="6" Grid.Column="0" Content="Stop" Command="{Binding StopLoadImage1, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="6" Grid.Column="2" Content="Stop" Command="{Binding StopLoadImage2, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="6" Grid.Column="4" Content="Stop" Command="{Binding StopLoadImage3, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Button Grid.Row="8" Grid.ColumnSpan="5" Content="Start all" Command="{Binding StartAll}"/>
+        <Button Grid.Row="8" Grid.ColumnSpan="5" Content="Start all" Command="{Binding StartAll, UpdateSourceTrigger=PropertyChanged}"/>
         
-        <TextBlock Grid.Row="8" Grid.Column="0"/>
-        <TextBlock Grid.Row="8" Grid.Column="2"/>
-        <TextBlock Grid.Row="8" Grid.Column="4"/>
-
-        <ProgressBar Grid.Row="10" Grid.ColumnSpan="5" Value="{Binding ProgressLoad, UpdateSourceTrigger=PropertyChanged}" Minimum="0" Maximum="{Binding MaxSize, UpdateSourceTrigger=PropertyChanged}"/>
+        <ProgressBar Grid.Row="10" Grid.ColumnSpan="5" Value="{Binding ProgressLoad, UpdateSourceTrigger=PropertyChanged}" Minimum="0" Maximum="100"/>
 
     </Grid>
 </Window>
